WKWebsiteDataStore doesn't track and remove iOS Safari's offline application cache entries https://bugs.webkit.org/show_bug.cgi?id=145279 rdar://problem/20657912

Reviewed by Dan Bernstein.

Special-case iOS Safari and WebApp when computing the default application cache directory.

* UIProcess/API/Cocoa/APIWebsiteDataStoreCocoa.mm:
(API::applicationCacheDirectory):
(API::WebsiteDataStore::defaultDataStoreConfiguration):

Canonical link: https://commits.webkit.org/163288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184727 268f45cc-cd09-0410-ab3c-d52691b4dbfc